fix: overflow workflow graph on validator page

--- a/app/components/validator-job/styles.scss
+++ b/app/components/validator-job/styles.scss
@@ -1,6 +1,7 @@
 & {
   margin: 10px 10px 0 0;
   color: $sd-text;
+  overflow-x: scroll;
 
   &.collapsible {
     border-radius: 3px;
