--- a/app/components/validator-pipeline/styles.scss
+++ b/app/components/validator-pipeline/styles.scss
@@ -5,6 +5,7 @@
   padding: 10px;
   font-weight: 300;
   color: $sd-text;
+  overflow-x: scroll;
 
   > div {
     padding: 3px;
